fixed the whitespace for the formtabs ul, now it looks like original plone
git-svn-id: https://svn.syslab.com/svn/syslabcom/recensio.theme/trunk@5417 51ee9ba4-e84d-4896-84de-354f1821c169

--- a/recensio/theme/skins/recensio_theme/screen.css
+++ b/recensio/theme/skins/recensio_theme/screen.css
@@ -1354,6 +1354,7 @@ margin-left:0;
 background-color:#DDDDDD;
 border-color:#DDDDDD #DDDDDD -moz-use-text-color;
 border-width:0.3em 0.3em 0;
+padding-left:0;
 }
 li.formTab {
 display:inline;
